the header is the wrong color fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,11 +38,11 @@ ul{
 #branding {
   background-color: var(--main-color);
   padding-left: 100px;
-  color: var(--second-color);
 }
 
 #branding h1 a {
   text-decoration: none;
+  color: var(--second-color);
 }
 
 .ul-link {
@@ -81,7 +81,6 @@ nav ul li a {
 .hero-banner h2 {
   background-color: var(--main-color);
   color: var(--second-color);
-  margin-right: 60px;
   margin-bottom: 10px;
 }
 
@@ -243,7 +242,8 @@ main {
 footer {
   display: flex;
   justify-content: center;
-  padding: 10px
+  padding: 10px;
+  color: var(--main-color);
 }
 
 /* Small screen devices Mobile (320px and above) */
@@ -270,7 +270,7 @@ footer {
 
   .hero-banner h2 {
     margin: 0;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
 
   .hero-banner {
@@ -325,8 +325,6 @@ footer {
     .contact-content {
       grid-area: contact-content;
     }
-
-
 
     .about, .work, .contact {
       padding: 0;
